In appsettings.JSON we can set the default value of the env variables and after that overwrite them in different configs belong to different environments.

--- a/ExploreCalifornia/appsettings.json
+++ b/ExploreCalifornia/appsettings.json
@@ -1,6 +1,6 @@
 {
   "FeatureToggles": {
-    "EnableDeveloperException": true
+    "EnableDeveloperException": false
   },
   "Logging": {
     "LogLevel": {
